--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "joi": "^17.1.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.3.0"
   }
 }
