--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "12.16.2"
   },
   "scripts": {
-    "start": "nodemon src/app.js",
-    "change-this-back-later-start": "node src/app.js",
+    "start-dev": "nodemon src/app.js",
+    "start": "node src/app.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "keywords": [
